--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "sass": "^1.58.0"
   }
 }
